--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,26 +3,17 @@
 <div class='bg-blue-900 text-gray-100 p-8 h-screen'>
   <div class='mx-auto mb-4'>
     <div class='h-12 flex items-center mb-4 border-b-2'>
-      <a href='#'>
+      <LinkTo @route="index">
         <h1 class='font-bold text-2xl'>
           Rock & Roll
           <span class='font-normal'>with Octane</span>
         </h1>
-      </a>
+      </LinkTo>
     </div>
-    <ul>
-      {{#each
-        (array
-          (hash title='Black Dog' band='Led Zeppelin' rating=3)
-          (hash title='Yellow Ledbetter' band='Pearl Jam' rating=4)
-          (hash title='The Pretender' band='Foo Fighters' rating=2)
-        )
-        as |song|
-      }}
-        <li>
-            {{song.title}} by {{song.band}} <span class="float-right">({{song.rating}})</span>
-        </li>
-      {{/each}}
-    </ul>
+    <nav class="h-8 flex items-center mb-8">
+      <LinkTo class="hover:text-gray-500" @route="bands">Bands</LinkTo>
+      <LinkTo class="hover:text-gray-500 ml-4" @route="songs">Songs</LinkTo>
+    </nav>
+    {{outlet}}
   </div>
 </div>
