--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
 <div class='bg-blue-900 text-gray-100 p-8 h-screen'>
   <div class='mx-auto mb-4'>
     <div class='h-12 flex items-center mb-4 border-b-2'>
-      <LinkTo @route="index">
+      <LinkTo @route="bands">
         <h1 class='font-bold text-2xl'>
           Rock & Roll
           <span class='font-normal'>with Octane</span>
