--- a/app/components/star-rating.hbs
+++ b/app/components/star-rating.hbs
@@ -1,12 +1,17 @@
 {{#if (has-block)}}
-    {{yeild this.stars}}
+  {{yeild this.stars}}
 {{else}}
-    {{#each this.stars as |star|}}
-    <button type="button" {{on 'click' (fn @onUpdate star.rating) }}>
-        <FaIcon
-            @icon='star'
-            @prefix={{if star.full 'fas' 'far'}}
-        />
+  {{#each this.stars as |star|}}
+    <button
+      type='button'
+      data-test-rr='star-rating-button'
+      {{on 'click' (fn @onUpdate star.rating)}}
+    >
+      <FaIcon
+        @icon='star'
+        @prefix={{if star.full 'fas' 'far'}}
+        data-test-rr={{if star.full 'full-star' 'empty-star'}}
+      />
     </button>
-    {{/each}}
-{{/if}}
+  {{/each}}
+{{/if}} 
