--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -6,13 +6,16 @@
       <li class='mb-2'>
         {{song.title}}
         <span class='float-right'>
-          <StarRating @rating={{song.rating}} @onUpdate={{fn this.updateRating song}} />
+          <StarRating
+            @rating={{song.rating}}
+            @onUpdate={{fn this.updateRating song}}
+          />
         </span>
       </li>
     {{/each}}
   </ul>
 {{else}}
-  <p class='text-center'>
+  <p class='text-center' data-test-rr='no-songs-text'>
     The band has no songs yet.
   </p>
 {{/if}}
@@ -35,11 +38,13 @@
       class='text-gray-800 bg-white rounded-md py-2 px-4'
       placeholder='Title'
       value={{this.title}}
+      data-test-rr='new-song-title'
       {{on 'input' this.updateTitle}}
     />
     <button
       type='button'
-      class='ml-4 px-4 py-2 rounded shadow-md hover:shadow-lg hover:text-white {{if this.hasNoTitle "bg-purple-500" "bg-purple-600"}}'
+      class='ml-4 px-4 py-2 rounded shadow-md hover:shadow-lg hover:text-white
+        {{if this.hasNoTitle "bg-purple-500" "bg-purple-600"}}'
       disabled={{this.hasNoTitle}}
       {{on 'click' this.saveSong}}
     >
